--- a/springcloudconfigserver/pom.xml
+++ b/springcloudconfigserver/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>microservicioeurekas</groupId>
-	<artifactId>microservicioeurekas</artifactId>
+	<groupId>com.zamora</groupId>
+	<artifactId>springcloudconfigserver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>microservicioeurekas</name>
+	<name>springcloudconfigserver</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -20,7 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
 
 		<dependency>
@@ -28,22 +28,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<dependency>
-			<groupId>org.glassfish.jaxb </groupId>
-			<artifactId>jaxb-runtime</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-configuration-processor</artifactId>
-			<optional>true</optional>
-		</dependency>
-		
-		<dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
